<resources>
    <string name="app_name">Kantin-Koperasi IT Del</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="fragmentkeranjang">Keranjang</string>
    <string name="fragmentakun">Akun</string>
    <string name="cari_produk_disini">Cari produk disini</string>
    <string name="apa_yang_ingin_anda_cari">Apa yang ingin Anda cari?</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="makanan_dan_minuman">Makanan dan Minuman</string>
    <string name="nama_makanan_dan_minuman">Nama Makanan dan Minuman</string>
    <string name="rp_0">Rp.0</string>
    <string name="nama_barang">Barang</string>
    <string name="ruangan">Ruangan</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="kantin_koperasi_it_del">Kantin Koperasi IT Del</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="no_ktp">No.KTP</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="daftarkan_akun_anda_segera">DAFTARKAN AKUN ANDA SEGERA!</string>
    <string name="ataumasuk">ATAU</string>
    <string name="google">Google</string>
    <string name="atau_masuk_dengan2">ATAU MASUK DENGAN</string>
    <string name="halo_deltizen">Halo Deltizen</string>
    <string name="profile_saya">PROFILE SAYA</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="nomor_telepon_mahasiswa">Nomor Telepon Mahasiswa</string>
    <string name="email_mahasiswa">Email Mahasiswa</string>
    <string name="no_ktp_mahasiswa">No KTP Mahasiswa</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="kop_kan_it_del">KOP-KAN IT DEL</string>
    <string name="kananpanah"><![CDATA[>]]></string>
    <string name="keranjang_saya">Keranjang Saya</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="log_out">Log out</string>
    <string name="stock">Stock</string>
    <string name="jenis_makanan_minuman">Jenis Makanan/Minuman</string>
    <string name="makanan_berat">Makanan Berat</string>
    <string name="_10">10</string>
    <string name="pesan_makanan_minuman">Pesan Makanan/Minuman</string>
    <string name="marcellinoknk_gmail_com">marcellinoknk@gmail.com</string>
    <string name="dibuat_oleh">Dibuat Oleh</string>
    <string name="nama_makanan_minuman">Nama Makanan/Minuman</string>
    <string name="nb">NB:</string>
    <string name="_1_makanan_berat">1 : Makanan Berat</string>
    <string name="_2_makanan_ringan">2 : Makanan Ringan</string>
    <string name="_3_minuman_berat">3 : Minuman Berat</string>
    <string name="_4_minuman_ringan">4 : Minuman Ringan</string>
    <string name="_1">1</string>
    <string name="totall">Total</string>
    <string name="select_all">Select All</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="bayarrr">Bayar</string>
    <string name="form_pemesanan">FORM PEMESANAN</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="nomor_teleponn">Nomor Telepon</string>
    <string name="total_harga">Total Harga</string>
    <string name="note_pesanan">Note Pesanan</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="inputan_harus_sesuai_dengan_total_pembayaran">*Inputan harus sesuai dengan total pembayaran</string>
    <string name="kirim_pembayaran">Kirim Pembayaran</string>
    <string name="_5000">5000</string>
    <string name="keranjang_barang">Keranjang Barang</string>
    <string name="nama_barangg">Nama Barang</string>
    <string name="koperasi_dan_kantin_it_del">Koperasi Dan Kantin IT Del</string>
    <string name="jenis_barang">Jenis Barang</string>
    <string name="atksas">ATK</string>
    <string name="marcellinoknl_gmail_com1">marcellinoknl@gmail.com</string>
    <string name="_1_snack">1. Snack</string>
    <string name="_2_peralatan_olahraga">2. Peralatan Olahraga</string>
    <string name="_3_peralatan_kebersihan">3. Peralatan Kebersihan</string>
    <string name="_4_atk">4. ATK</string>
    <string name="pesan_barang_sekarang">Pesan Barang Sekarang</string>
    <string name="keranjang_makanan_dan_minuman">KERANJANG MAKANAN DAN MINUMAN</string>
    <string name="keranjang_barang_dan_snack">KERANJANG BARANG DAN SNACK</string>
    <string name="keranjang_pulsa">KERANJANG PULSA</string>
    <string name="data_pemesanan_makanan_dan_minuman">Data Pemesanan Makanan dan Minuman</string>
    <string name="isi_data_pemesanan_makanan_dan_minuman_anda">* Isi Data Pemesanan Makanan dan Minuman Anda</string>
    <string name="anda_belum_menambahkan_deskripsi_pemesanan">Anda belum menambahkan deskripsi pemesanan</string>
    <string name="isi_tambahkan_data_pemesanan">Isi/Tambahkan Data Pemesanan</string>
    <string name="angkatan">Angkatan*</string>
    <string name="nama_penerimaaa">Nama Penerima*</string>
    <string name="simpan_data_pemesan">Simpan Data Pemesan</string>
    <string name="niim_penerima">NIIM Penerima*</string>
    <string name="nn">Nomor telepon*</string>
    <string name="prodiiii">Prodi*</string>
    <string name="d4trplll">D4TRPL</string>
    <string name="angkatannnn">Angkatan</string>
    <string name="bayarrrr">Bayar</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="virtual_account_bca">Virtual Account BCA</string>
    <string name="nama_peminjam">Nama Peminjam</string>
    <string name="nim_peminjam">NIM Peminjam</string>
    <string name="angkatan_penerima">Angkatan Penerima</string>
    <string name="nama_ruangan">Nama Ruangan</string>
    <string name="jadwal_pemakaian">Jadwal Pemakaian</string>
    <string name="keterangan_pemakaian">Keterangan Pemakaian</string>
    <string name="simpan_data_ruangan">Simpan Data Ruangan</string>
    <string name="klik_untuk_meminjam_ruangan">Klik untuk meminjam Ruangan</string>
    <string name="no_handphonee">No Handphone</string>
    <string name="jenis_kartu_telepon">Jenis Kartu Telepon</string>
    <string name="pembelian_pulsa">Pembelian Pulsa</string>
    <string name="klik_untuk_melakukan_pembelian_pulsa">Klik untuk melakukan Pembelian Pulsa</string>
    <string name="nama_pembeli_pulsa">Nama Pembeli Pulsa</string>
    <string name="nim_pembeli_pulsa">NIM Pembeli Pulsa</string>
    <string name="kirimkan_permintaan">Kirimkan Permintaan</string>
    <string name="nominal_pembelian_pulsa">Nominal Pembelian Pulsa</string>
    <string name="harga_pembelian_pulsa_nominal_rp_2000">*Harga Pembelian Pulsa : Nominal + Rp.2000</string>
    <string name="pembayaran_melalui_dana_082166861855">Pembayaran melalui DANA : 082166861855</string>


</resources>