<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang_di"
            android:textSize="20sp"
            android:textColor="@color/login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kantin_koperasi_it_del"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/login"
            />
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/shop"/>

        <Button
            android:layout_width="150dp"
            android:id="@+id/button_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:backgroundTint="@color/login"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:backgroundTint="@color/register"/>

    </LinearLayout>

</RelativeLayout>